# applications_hap

./: .gitattributes  Airquality_Demo.hap  AmsDialog.hap  AudioPicker.hap  AuthWidget.hap  BUILD.gn  Calc_Demo.hap  CalendarData.hap  CallUI.hap  Camera.hap  CertificateManager.hap  Clock_Demo.hap  Contacts.hap  Contacts_DataAbility.hap  DeviceManager_UI.hap  Ecg_Demo.hap  FilePicker.hap  Flashlight_Demo.hap  Launcher.hap  Launcher_Recents.hap  Launcher_Settings.hap  Media_Library.hap  Media_Scanner.hap  Mms.hap  MobileDataSettings.hap  Music_Demo.hap  Note.hap  NotificationDialog.hap  OAT.xml  PermissionManager-Grant.hap  PermissionManager-Settings.hap  PermissionManager.hap  Photos.hap  PrintSpooler.hap  README.md  README_zh.md  ScreenLock.hap  ScreenShot.hap  SecurityPrivacyCenter.hap  Settings.hap  (+19 more)
hisysevent/com.huawei.MigrationAssistant/: hisysevent.yaml
hisysevent/com.ohos.camera/: hisysevent.yaml
hisysevent/com.ohos.certmanager/: hisysevent.yaml
hisysevent/com.ohos.launcher/: hisysevent.yaml
hisysevent/com.ohos.systemui/: hisysevent.yaml
pre_bundle_profile/: BUILD.gn  pre_bundle_profile.gni
pre_bundle_profile/ohos_arm64/: install_list_permissions.json  preinstall_ability_config.json  preinstall_config.json
pre_bundle_profile/rk3568/: install_list_permissions.json  pre_uninstall_config.json  preinstall_config.json
pre_bundle_profile/watchos/: install_list_permissions.json  preinstall_ability_config.json  preinstall_config.json
resources/: Settings.hap  downloadTemplate.js
