# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("launcher_hap") {
  source = "Launcher.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("launcher_recents_hap") {
  source = "Launcher_Recents.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("launcher_settings_hap") {
  source = "Launcher_Settings.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("settings_hap") {
  source = "Settings.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("settingsData_hap") {
  source = "SettingsData.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("navigationBar_hap") {
  source = "SystemUI-NavigationBar.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("statusBar_hap") {
  source = "SystemUI-StatusBar.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("notificationManagement_hap") {
  source = "SystemUI-NotificationManagement.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("clock_demo_hap") {
  source = "Clock_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("airquality_demo_hap") {
  source = "Airquality_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("calc_demo_hap") {
  source = "Calc_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("shopping_demo_hap") {
  source = "Shopping_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("flashlight_demo_hap") {
  source = "Flashlight_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("ecg_demo_hap") {
  source = "Ecg_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("photos_hap") {
  source = "Photos.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("music_demo_hap") {
  source = "Music_Demo.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("demo.wav") {
  source = "resources/demo.wav"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("dynamic.wav") {
  source = "resources/dynamic.wav"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("camera_hap") {
  source = "Camera.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("capture.ogg") {
  source = "resources/capture.ogg"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("device_manager_ui_hap") {
  source = "DeviceManager_UI.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("kika_input_hap") {
  source = "kikaInput.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("media_library_hap") {
  source = "Media_Library.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("media_scanner_hap") {
  source = "Media_Scanner.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("callUI_hap") {
  source = "CallUI.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("mms_hap") {
  source = "Mms.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("contacts_hap") {
  source = "Contacts.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("contacts_data_ability_hap") {
  source = "Contacts_DataAbility.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("permission_manager_hap") {
  source = "PermissionManager.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("settings_faceauth_hap") {
  source = "Settings_FaceAuth.hap"
  module_install_dir = "app"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

group("hap") {
  deps = [
    "//applications/standard/hap:airquality_demo_hap",
    "//applications/standard/hap:calc_demo_hap",
    "//applications/standard/hap:callUI_hap",
    "//applications/standard/hap:camera_hap",
    "//applications/standard/hap:capture.ogg",
    "//applications/standard/hap:clock_demo_hap",
    "//applications/standard/hap:contacts_data_ability_hap",
    "//applications/standard/hap:contacts_hap",
    "//applications/standard/hap:demo.wav",
    "//applications/standard/hap:device_manager_ui_hap",
    "//applications/standard/hap:dynamic.wav",
    "//applications/standard/hap:ecg_demo_hap",
    "//applications/standard/hap:flashlight_demo_hap",
    "//applications/standard/hap:kika_input_hap",
    "//applications/standard/hap:launcher_hap",
    "//applications/standard/hap:launcher_recents_hap",
    "//applications/standard/hap:launcher_settings_hap",
    "//applications/standard/hap:mms_hap",
    "//applications/standard/hap:music_demo_hap",
    "//applications/standard/hap:navigationBar_hap",
    "//applications/standard/hap:notificationManagement_hap",
    "//applications/standard/hap:permission_manager_hap",
    "//applications/standard/hap:photos_hap",
    "//applications/standard/hap:settingsData_hap",
    "//applications/standard/hap:settings_faceauth_hap",
    "//applications/standard/hap:settings_hap",
    "//applications/standard/hap:shopping_demo_hap",
    "//applications/standard/hap:statusBar_hap",
  ]
  if (defined(product_name) && product_name == "watchos") {
    deps -= [
      "//applications/standard/hap:airquality_demo_hap",
      "//applications/standard/hap:calc_demo_hap",
      "//applications/standard/hap:callUI_hap",
      "//applications/standard/hap:camera_hap",
      "//applications/standard/hap:capture.ogg",
      "//applications/standard/hap:contacts_data_ability_hap",
      "//applications/standard/hap:contacts_hap",
      "//applications/standard/hap:demo.wav",
      "//applications/standard/hap:dynamic.wav",
      "//applications/standard/hap:ecg_demo_hap",
      "//applications/standard/hap:flashlight_demo_hap",
      "//applications/standard/hap:kika_input_hap",
      "//applications/standard/hap:mms_hap",
      "//applications/standard/hap:music_demo_hap",
      "//applications/standard/hap:navigationBar_hap",
      "//applications/standard/hap:photos_hap",
      "//applications/standard/hap:settingsData_hap",
      "//applications/standard/hap:settings_faceauth_hap",
      "//applications/standard/hap:settings_hap",
      "//applications/standard/hap:shopping_demo_hap",
      "//applications/standard/hap:statusBar_hap",
    ]
  }
}
