# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//applications/standard/hap/pre_bundle_profile/pre_bundle_profile.gni")
import("//build/ohos.gni")

ohos_prebuilt_etc("pre_uninstall_config") {
  source = "${prebundle_path}/pre_uninstall_config.json"
  relative_install_dir = "bundle"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("preinstall_ability_config") {
  source = "${prebundle_path}/preinstall_ability_config.json"
  relative_install_dir = "bundle"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("preinstall_config") {
  source = "${prebundle_path}/preinstall_config.json"
  relative_install_dir = "bundle"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

group("pre_bundle_policy") {
  deps = [
    ":pre_uninstall_config",
    ":preinstall_ability_config",
    ":preinstall_config",
  ]
}
