# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

application_hap_path = "//applications/standard/hap"

prebundle_inner_path = "rk3568"
if (defined(product_name) && product_name == "watchos") {
  prebundle_inner_path = "watchos"
} else if (defined(product_name) && product_name == "ohos-arm64") {
  prebundle_inner_path = "ohos_arm64"
}

prebundle_path =
    "${application_hap_path}/pre_bundle_profile/${prebundle_inner_path}"
